[gd_scene load_steps=14 format=2]

[ext_resource path="res://Art/bg_boxing.png" type="Texture" id=1]
[ext_resource path="res://Art/boxer_wendy.png" type="Texture" id=2]
[ext_resource path="res://Scripts/enemy.gd" type="Script" id=3]
[ext_resource path="res://Art/boxer_player.png" type="Texture" id=4]
[ext_resource path="res://Scripts/player.gd" type="Script" id=5]
[ext_resource path="res://Scripts/ui.gd" type="Script" id=6]
[ext_resource path="res://Art/kd_counter.png" type="Texture" id=7]
[ext_resource path="res://Coiny-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Art/hp_bar.png" type="Texture" id=9]
[ext_resource path="res://Music/bgm_boxing_segment.ogg" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
extra_spacing_bottom = 16
extra_spacing_char = -1
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 200
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]

[node name="Background" type="TextureRect" parent="."]
margin_right = 450.0
margin_bottom = 300.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Enemy" type="Sprite" parent="."]
position = Vector2( 440, 370 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 6
hframes = 4
script = ExtResource( 3 )

[node name="SFXPlayer" type="AudioStreamPlayer" parent="Enemy"]
volume_db = -10.0

[node name="Player" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( 439, 420 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
vframes = 2
hframes = 6
script = ExtResource( 5 )

[node name="SFXPlayer" type="AudioStreamPlayer" parent="Player"]

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="Player_KDC" type="Sprite" parent="UI"]
position = Vector2( 370, 60 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 7 )
vframes = 4

[node name="Enemy_KDC" type="Sprite" parent="UI"]
position = Vector2( 530, 60 )
texture = ExtResource( 7 )
vframes = 4

[node name="BehindHP" type="ColorRect" parent="UI"]
margin_left = 100.0
margin_right = 800.0
margin_bottom = 45.0
color = Color( 0, 0, 0, 1 )

[node name="Player_HP_Bar" type="ColorRect" parent="UI"]
margin_left = 410.0
margin_right = 720.0
margin_bottom = 45.0
rect_scale = Vector2( -1, 1 )
color = Color( 1, 0, 0, 1 )

[node name="Enemy_HP_Bar" type="ColorRect" parent="UI"]
margin_left = 490.0
margin_right = 800.0
margin_bottom = 45.0
color = Color( 1, 0, 0, 1 )

[node name="WinScreen" type="ColorRect" parent="UI"]
editor/display_folded = true
visible = false
margin_top = 400.0
margin_right = 900.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.486275 )

[node name="Label" type="Label" parent="UI/WinScreen"]
margin_right = 900.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "You Win!
Press SPACE key to continue!"
align = 1
valign = 1

[node name="KDScreen" type="ColorRect" parent="UI"]
editor/display_folded = true
visible = false
margin_top = 400.0
margin_right = 900.0
margin_bottom = 550.0
color = Color( 0, 0, 0, 0.486275 )

[node name="Label" type="Label" parent="UI/KDScreen"]
margin_right = 900.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
text = "Hold SPACE to get up!"
align = 1
valign = 1

[node name="LoseScreen" type="ColorRect" parent="UI"]
editor/display_folded = true
visible = false
margin_top = 400.0
margin_right = 900.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.486275 )

[node name="Label" type="Label" parent="UI/LoseScreen"]
margin_right = 900.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "You've lost!
Press SPACE key to try again!"
align = 1
valign = 1

[node name="HPBox" type="TextureRect" parent="UI"]
margin_left = 100.0
margin_right = 800.0
margin_bottom = 48.0
texture = ExtResource( 9 )

[node name="Time" type="Label" parent="UI"]
margin_left = 400.0
margin_right = 500.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "0:00"
align = 1
valign = 1

[node name="Count" type="Label" parent="UI"]
margin_left = 325.0
margin_top = 200.0
margin_right = 525.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 0.627451 )
align = 1

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="AnnouncerPlayer" type="AudioStreamPlayer" parent="."]

